--- a/introduction.html
+++ b/introduction.html
@@ -1,18 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to HTML</title>
 </head>
+
 <body>
     <h1>Introduction to HTML</h1>
-    <p>HTML stands for HyperText Markup Language. It is the standard language used to create and structure the content of a webpage.</p>
     <ul>
-        <li><b>HyperText</b>: This refers to the ability to create links that connect web pages to one another, making the web a connected "web" of information.</li>
-        <li><b>Markup Language</b>: This means you use "tags" to surround your content, giving that content meaning and structure. You are "marking up" a plain text document.</li>
+        <li>
+            <h3>What is HTML ?</h3>
+            <p>HTML stands for HyperText Markup Language. It is the standard language used to create and structure the
+                content of a webpage.</p>
+            <ul>
+                <li><b>HyperText</b>: This refers to the ability to create links that connect web pages to one another,
+                    making the web a connected "web" of information.</li>
+                <li><b>Markup Language</b>: This means you use "tags" to surround your content, giving that content
+                    meaning and structure. You are "marking up" a plain text document.</li>
+            </ul>
+            <p>First Website: <a href="https://info.cern.ch/hypertext/WWW/TheProject.html"
+                    target="_blank">https://info.cern.ch/hypertext/WWW/TheProject.html</a></p>
+        </li>
+        <li>
+            <h3>The Heading tag (&lt;h&gt;&lt;/h&gt;)</h3>
+            <p>Headings are tags used to define titles and subtitles on your page. They are crucial for creating a
+                logical hierarchy and outline for your content.</p>
+            <p>There are six levels of headings in HTML, ranging from &lt;h1&gt; to &lt;h6&gt;. &lt;h1&gt; is the most
+                important heading, typically used for the main title of the page, while &lt;h6&gt; is the least
+                important.</p>
+            <p>Example:</p>
+            <pre>&lt;h1&gt;This is a main heading&lt;/h1&gt;
+&lt;h2&gt;This is a subheading&lt;/h2&gt;
+&lt;h3&gt;This is a smaller subheading&lt;/h3&gt;</pre>
+        </li>
+        <li>
+            <h3>The Paragraph tag (&lt;p&gt;&lt;/p&gt;)</h3>
+            <p>The &lt;p&gt; tag is used to define a paragraph of text. It helps to separate blocks of text, making the
+                content more readable and organized.</p>
+            <p>Example:</p>
+            <pre>&lt;p&gt;This is a paragraph of text.&lt;/p&gt;
+&lt;p&gt;This is another paragraph of text.&lt;/p&gt;</pre>
+        </li>
+        <li>
+            <h3>HTML Horizontal Rules</h3>
+            <p>The &lt;hr&gt; tag is used to create a horizontal line (or "rule") across the page. It is often used to
+                separate sections of content visually.</p>
+            <p>Example:</p>
+            <pre>&lt;hr&gt;</pre>
+        </li>
+        <li>
+            <h3>The Line Break Tag (&lt;br&gt;)</h3>
+            <p>The &lt;br&gt; tag is used to insert a line break within a block of text. It is useful for breaking lines
+                without starting a new paragraph.</p>
+            <p>Example:</p>
+            <pre>This is the first line.&lt;br&gt;This is the second line.</pre>
+        </li>
+        <li>
+            <h3>The Anchor Tag (&lt;a&gt;&lt;/a&gt;)</h3>
+            <p>The &lt;a&gt; tag is used to create hyperlinks, which allow users to click and navigate to other web
+                pages or resources.</p>
+            <p>The &lt;a&gt; tag uses the "href" attribute to specify the destination URL of the link.</p>
+            <p>Example:</p>
+            <pre>&lt;a href="https://www.example.com"&gt;This is a link to Example.com&lt;/a&gt;</pre>
+        </li>
+        <li>
+            <h3>HTML boilerplate code</h3>
+            <p>Boilerplate code refers to the standard structure and elements that are commonly included in an HTML
+                document. This code provides a basic framework for your webpage and ensures that it adheres to web
+                standards.</p>
+            <p>Example of a basic HTML boilerplate:</p>
+            <pre>&lt;!DOCTYPE html&gt;
+&lt;html lang="en"&gt;
+&lt;head&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;meta name = "viewport" content = width=device-width, initial-scale=1.0"&gt;
+    &lt;title&gt;Document Title&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+&lt;!-- Your content goes here --&gt;
+&lt;/body&gt;
+&lt;/html&gt;</pre>
+
+            <p> Explanation of the boiler plate</p>
+            <ul>
+                <li><b>&lt;!DOCTYPE html&gt;</b>: This declaration defines the document type and version of HTML being
+                    used (HTML5 in this case).</li>
+                <li><b>&lt;html lang="en"&gt;</b>: This is the root element of the HTML document. The "lang" attribute
+                    specifies the language of the document (English in this case).</li>
+                <li><b>&lt;head&gt;</b>: This section contains meta-information about the document, such as its
+                    character encoding, viewport settings for responsive design, and the title that appears in the
+                    browser tab.</li>
+                <li><b>&lt;meta charset="UTF-8"&gt;</b>: This tag sets the character encoding for the document to UTF-8,
+                    which supports a wide range of characters from different languages.</li>
+                <li><b>&lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;</b>: This tag helps
+                    ensure that the webpage is responsive and displays correctly on different devices by setting the
+                    viewport width to match the device's width and setting the initial zoom level to 1.0.</li>
+                <li><b>&lt;title&gt;Document Title&lt;/title&gt;</b>: This tag defines the title of the document, which
+                    appears in the browser tab and is important for SEO.</li>
+                <li><b>&lt;body&gt;</b>: This section contains the main content of the webpage that will be displayed to
+                    users. You can add text, images, links, and other elements here.</li>
+        </li>
     </ul>
-    <p>First Website: <a href="https://info.cern.ch/hypertext/WWW/TheProject.html" target="_blank">https://info.cern.ch/hypertext/WWW/TheProject.html</a></p>
-    
 </body>
 </html>
