--- a/introduction.html
+++ b/introduction.html
@@ -31,17 +31,53 @@
                 important heading, typically used for the main title of the page, while &lt;h6&gt; is the least
                 important.</p>
             <p>Example:</p>
-            <pre>&lt;h1&gt;This is a main heading&lt;/h1&gt;
+            <table border="1">
+                <tr>
+                    <td>Code :</td>
+                </tr>
+                <tr>
+                    <td>
+                        <pre>&lt;h1&gt;This is a main heading&lt;/h1&gt;
 &lt;h2&gt;This is a subheading&lt;/h2&gt;
 &lt;h3&gt;This is a smaller subheading&lt;/h3&gt;</pre>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Output :</td>
+                </tr>
+                <tr>
+                    <td>
+                        <h1>This is a main heading</h1>
+                        <h2>This is a subheading</h2>
+                        <h3>This is a smaller subheading</h3>
+                    </td>
+                </tr>
+            </table>
         </li>
         <li>
             <h3>The Paragraph tag (&lt;p&gt;&lt;/p&gt;)</h3>
             <p>The &lt;p&gt; tag is used to define a paragraph of text. It helps to separate blocks of text, making the
                 content more readable and organized.</p>
-            <p>Example:</p>
-            <pre>&lt;p&gt;This is a paragraph of text.&lt;/p&gt;
+            <table border="1">
+                <tr>
+                    <td>Code :</td>
+                </tr>
+                <tr>
+                    <td>
+                        <pre>&lt;p&gt;This is a paragraph of text.&lt;/p&gt;
 &lt;p&gt;This is another paragraph of text.&lt;/p&gt;</pre>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Output :</td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>This is a paragraph of text.</p>
+                        <p>This is another paragraph of text.</p>
+                    </td>
+                </tr>
+            </table>
         </li>
         <li>
             <h3>HTML Horizontal Rules</h3>
@@ -54,8 +90,24 @@
             <h3>The Line Break Tag (&lt;br&gt;)</h3>
             <p>The &lt;br&gt; tag is used to insert a line break within a block of text. It is useful for breaking lines
                 without starting a new paragraph.</p>
-            <p>Example:</p>
-            <pre>This is the first line.&lt;br&gt;This is the second line.</pre>
+            <table border="1">
+                <tr>
+                    <td>Code :</td>
+                </tr>
+                <tr>
+                    <td>
+                        <pre>This is the first line.&lt;br&gt;This is the second line.</pre>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Output :</td>
+                </tr>
+                <tr>
+                    <td>
+                        This is the first line.<br>This is the second line.
+                    </td>
+                </tr>
+            </table>
         </li>
         <li>
             <h3>The Anchor Tag (&lt;a&gt;&lt;/a&gt;)</h3>
@@ -63,7 +115,24 @@
                 pages or resources.</p>
             <p>The &lt;a&gt; tag uses the "href" attribute to specify the destination URL of the link.</p>
             <p>Example:</p>
-            <pre>&lt;a href="https://www.example.com"&gt;This is a link to Example.com&lt;/a&gt;</pre>
+            <table border="1">
+                <tr>
+                    <td>Code :</td>
+                </tr>
+                <tr>
+                    <td>
+                        <pre>&lt;a href="https://www.example.com"&gt;This is a link to Example.com&lt;/a&gt;</pre>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Output :</td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="https://www.example.com">This is a link to Example.com</a>
+                    </td>
+                </tr>
+            </table>
         </li>
         <li>
             <h3>HTML boilerplate code</h3>
