added media file

--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
                 <li>More Specialized Inputs (HTML5 Power-ups)</li>
             </ul>
         </li>
+        <li>
+            <a href="media.html">HTML media</a>
+            <ul>
+                <li>Video basics (&lt;video&gt;)</li>
+                <li>Controls, autoplay, poster</li>
+                <li>Multiple sources (&lt;source&gt;)</li>
+                <li>Captions &amp; subtitles (&lt;track&gt;)</li>
+                <li>Audio (&lt;audio&gt;)</li>
+            </ul>
+        </li>
     </ul>
 </body>
 </html>
