--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <ul>
                 <li>Ordered list (&lt;ol&gt;&lt;/ol&gt;)</li>
                 <li>Unordered list (&lt;ul&gt;&lt;/ul&gt;)</li>
+                <li>Description Lists (&lt;dl&gt;&lt;/dl&gt;)</li>
                 <li>List item (&lt;li&gt;&lt;/li&gt;)</li>
             </ul>
         </li>
