--- a/files.html
+++ b/files.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Files</title>
+    <title>HTML file paths</title>
 </head>
 <body>
     <h1>HTML file paths</h1>
