--- a/introduction.html
+++ b/introduction.html
@@ -6,6 +6,18 @@
     <title>Introduction to HTML</title>
 </head>
 <body>
+    <nav>
+        <h3>Navigation</h3>
+        <a href="index.html">Home</a> |
+        <a href="introduction.html">Introduction</a> |
+        <a href="lists.html">Lists</a> |
+        <a href="tables.html">Tables</a> |
+        <a href="files.html">Files</a> |
+        <a href="forms.html">Forms</a> |
+        <a href="media.html">Media</a>
+        <hr>
+    </nav>
+    
     <h1>Introduction to HTML</h1>
     <p>HTML stands for HyperText Markup Language. It is the standard language used to create and structure the content of a webpage.</p>
     <ul>
