--- a/media.html
+++ b/media.html
@@ -6,6 +6,18 @@
     <title>HTML Media — video & audio</title>
 </head>
 <body>
+    <nav>
+        <h3>Navigation</h3>
+        <a href="index.html">Home</a> |
+        <a href="introduction.html">Introduction</a> |
+        <a href="lists.html">Lists</a> |
+        <a href="tables.html">Tables</a> |
+        <a href="files.html">Files</a> |
+        <a href="forms.html">Forms</a> |
+        <a href="media.html">Media</a>
+        <hr>
+    </nav>
+    
     <h1>HTML MEDIA</h1>
 
     <h2>First Principle: The Web is More Than Text and Images</h2>
