--- a/lists.html
+++ b/lists.html
@@ -8,6 +8,18 @@
 </head>
 
 <body>
+    <nav>
+        <h3>Navigation</h3>
+        <a href="index.html">Home</a> |
+        <a href="introduction.html">Introduction</a> |
+        <a href="lists.html">Lists</a> |
+        <a href="tables.html">Tables</a> |
+        <a href="files.html">Files</a> |
+        <a href="forms.html">Forms</a> |
+        <a href="media.html">Media</a>
+        <hr>
+    </nav>
+    
     <h2>HTML Lists</h2>
 
     <h3>What are Lists in HTML?</h3>
